--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,50 @@
-on: ["push", "pull_request"]
-
-name: Test Coveralls
+name: Tests
+on: [push, pull_request]
+env:
+  CI: true
 
 jobs:
+  test:
+    name: Node ${{ matrix.node }} on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
 
-  build:
-    name: Build
+    strategy:
+      fail-fast: false
+      matrix:
+        node: [22.14.0]
+        os: [ubuntu-latest, windows-latest]
+
+    steps:
+      - name: Clone repository
+        uses: actions/checkout@v2
+
+      - name: Set Node.js version
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node }}
+
+      - name: Install npm dependencies
+        run: npm ci
+
+      - name: Run lint
+        run: npm run lint
+
+      - name: Run tests
+        run: npm run test:cov
+
+      - name: Coveralls
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          flag-name: ${{matrix.os}}-node-${{ matrix.node }}
+          parallel: true
+
+  finish:
+    needs: test
     runs-on: ubuntu-latest
     steps:
-
-    - uses: actions/checkout@v4
-
-    - name: Use Node.js 22.14.0
-      uses: actions/setup-node@v3
-      with:
-        node-version: 22.14.0
-
-    - name: npm install, make test-coverage
-      run: |
-        npm install
-        npm run build
-
-    - name: Coveralls
-      uses: coverallsapp/github-action@v2
+      - name: Coveralls Finished
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          parallel-finished: true
