--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,21 +16,21 @@ jobs:
 
     steps:
       - name: Clone repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set Node.js version
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node }}
 
-      - name: Install npm dependencies
-        run: npm ci
+      - name: Install dependencies
+        run: yarn install
 
       - name: Run lint
-        run: npm run lint
+        run: yarn lint
 
       - name: Run tests
-        run: npm run test:cov
+        run: yarn test:cov
 
       - name: Coveralls
         uses: coverallsapp/github-action@master
