update yarn version

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "file-store",
-  "version": "0.0.1",
+  "packageManager": "yarn@4.7.0",
+  "version": "1.0.0",
   "description": "",
   "author": "",
   "private": true,
