--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Clone repository
         uses: actions/checkout@v4
 
-      - name: Enable corepack
-        run: corepack enable
+      - name: Install corepack
+        run: npm install -g corepack
 
       - name: Set Node.js version
         uses: actions/setup-node@v4
