--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,9 @@ jobs:
           node-version: ${{ matrix.node }}
           cache: 'yarn'
 
+      - name: Install corepack
+        run: npm install -g corepack
+
       - name: Install dependencies
         run: yarn install --frozen-lockfile
 
